--- a/src/components/login.css
+++ b/src/components/login.css
@@ -155,5 +155,9 @@ width: 260px ;
   
 } 
 
-        
-        
+    
+.dashboard {
+  background-image: url("https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80");
+  background-size: cover;
+  object-fit: cover;  
+}   
