--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,8 +1,10 @@
 
 h1{
+  
   margin-top:-30px
   
 }
+
 h4{
   font-size: 40px;
   margin-top: -30px;
@@ -154,6 +156,26 @@ width: 260px ;
    float:right;
   
 } 
+.form2{
+  margin: auto ;
+  margin-top:40px;
+  background-color: #fbb034;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  min-height: 323px;
+  max-height: 730px;
+  width: fit-content;
+  text-align: center;
+  border-radius: 30px; 
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+  0 10px 10px rgba(0, 0, 0, 0.22);
+position: relative ;
+overflow: hidden;
+width: 260px ;
+  }
 
     
 .dashboard {
