--- a/src/components/header.css
+++ b/src/components/header.css
@@ -40,6 +40,15 @@ header {
      color:white;
      font-weight: 700;   
 }
+.dashboard {
+  background-size:cover;
+  background-image: url("https://images.unsplash.com/photo-1495195134817-aeb325a55b65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80");
+  background-repeat: no-repeat;
+  background-position:center center;
+  background-attachment:fixed;
+    text-align: center;
+    object-fit: cover;  
+}
 nav  {
     font-size: 20px;
     color: coral;
@@ -51,6 +60,7 @@ nav  {
     opacity: 0.85;
     width: fit-content;
 } 
+
       div{
       word-wrap: break-word;
     }
