--- a/src/components/GetMenu.css
+++ b/src/components/GetMenu.css
@@ -1,5 +1,8 @@
-h2{
-    font-size: 20px;
+h5{
+    font-size: 40px;
+    color: #da8695;
+    margin-top: 10px;
+
 }
 .form-group {
   margin: auto ;
